# rest

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  http.rs  lib.rs  rest.rs  serializer.rs  validator.rs
tests/: lib.rs
