[package]
name = "simple-rest"
version = "0.1.0"
authors = ["Rajczyk <Rajczyk@users.noreply.github.com>"]

[lib]
name = "simple-rest"
path = "src/lib.rs"

[dependencies]
url =  "1.1.1"
time =  "0.1.35"
hyper = { git = "https://github.com/hyperium/hyper" }
serde_json = { git = "https://github.com/serde-rs/json.git" }