[package]
name = "simple_rest"
version = "0.1.0"
authors = ["Rajczyk <Rajczyk@users.noreply.github.com>"]

[lib]
name = "simple_rest"
path = "src/lib.rs"

[dependencies]
log = "*"
url =  "*"
time =  "*"
regex = "*"
hyper = { git = "https://github.com/hyperium/hyper" }
serde_json = { git = "https://github.com/serde-rs/json.git" }